--- a/Learn js.info/index.html
+++ b/Learn js.info/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Lesson First</title>
-    <script src="script.js"></script>
-</head>
-<body>
-<h1>Objects</h1>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Lesson First</title>
+        <script src="script.js"></script>
+    </head>
+    <body>
+        <h1>Types - <a href="">link</a></h1>
+    </body>
 </html>
