--- a/Learn js.info/index.html
+++ b/Learn js.info/index.html
@@ -6,6 +6,6 @@
     <script src="script.js"></script>
 </head>
 <body>
-<h1>Objects</h1>
+<h1>Array<a href="https://uk.javascript.info/array#tasks">link</a></h1>
 </body>
 </html>
