--- a/Learn js.info/index.html
+++ b/Learn js.info/index.html
@@ -6,6 +6,6 @@
     <script src="script.js"></script>
 </head>
 <body>
-<h1>Array<a href="">Link</a></h1>
+<h1>Map&Set<a href="https://uk.javascript.info/map-set#set">Link</a></h1>
 </body>
 </html>
