--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Lesson First</title>
-    <script src="script.js"></script>
+    <script src="class_user.js"></script>
 </head>
 <body>
 <h1>Array<a href="">Link</a></h1>
