--- a/source/index.html
+++ b/source/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Lesson First</title>
-    <script src="script.js"></script>
+    <script src="monthly_task.js"></script>
 </head>
 <body>
-<h1>Array<a href="">Link</a></h1>
+<h1>Monthly Task</h1>
 </body>
 </html>
