--- a/source/index.html
+++ b/source/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Lesson First</title>
-    <script src="script.js"></script>
-</head>
-<body>
-<h1>Array<a href="">Link</a></h1>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Lesson First</title>
+
+        <link rel="stylesheet" href="main.css" />
+    </head>
+    <body>
+        <div id="shopping-list">
+            <h1>{{header}}</h1>
+            <input v-model="header" />
+            <ul>
+                <li v-for="item in items" :key="item.id">{{ item.label }}</li>
+            </ul>
+        </div>
+        <script src="https://unpkg.com/vue@3"></script>
+        <script>
+            const shoppingList = Vue.createApp({
+                data() {
+                    return {
+                        header: "Shopping list app!",
+                        items: [
+                            { id: 1, label: "10 party hats" },
+                            { id: 2, label: "20 board games" },
+                            { id: 3, label: "20 cups" },
+                        ],
+                    };
+                },
+            }).mount("#shopping-list");
+        </script>
+    </body>
 </html>
