--- a/source/index.html
+++ b/source/index.html
@@ -7,9 +7,26 @@
         <link rel="stylesheet" href="main.css" />
     </head>
     <body>
+        <style>
+            .strikeout {
+                text-decoration: line-through;
+            }
+            .priority {
+                color: burlywood;
+            }
+        </style>
         <div id="shopping-list">
-            <h1>{{header}}</h1>
-            <div>
+            <div class="header">
+                <h1>{{header || 'Welcome'}}</h1>
+                <button v-if="editing" @click="doEdit(false)" type="button">
+                    Cancel
+                </button>
+                <button v-else @click="doEdit(true)" type="button">
+                    Add Item
+                </button>
+            </div>
+
+            <div v-if="editing">
                 <input
                     v-model="newItem"
                     type="text"
@@ -20,10 +37,27 @@
                     <input type="checkbox" v-model="newItemHighPriority" />
                     High Priority
                 </label>
-                <button @click="saveItem" class="btn">Save Item</button>
+                <button
+                    type="button"
+                    @click="saveItem"
+                    class="btn"
+                    v-bind:disabled="newItem.length === 0"
+                >
+                    Save Item
+                </button>
+                <p>{{characterCount}}/200</p>
             </div>
+            <a v-bind:herf="newItem">Dynamic Link</a>
+            <p v-if="items.length === 0">No items</p>
             <ul>
-                <li v-for="item in items" :key="item.id">{{ item.label }}</li>
+                <li
+                    v-for="item in revercedItems"
+                    :key="item.id"
+                    :class="{strikeout: item.purchased, priority: item.highPriority}"
+                    @click="togglePurchased(item)"
+                >
+                    {{ item.label }}
+                </li>
             </ul>
         </div>
         <script src="https://unpkg.com/vue@3"></script>
@@ -32,12 +66,28 @@
                 data() {
                     return {
                         header: "Shopping list app!",
+                        editing: false,
                         newItem: "",
                         newItemHighPriority: false,
                         items: [
-                            { id: 1, label: "10 party hats" },
-                            { id: 2, label: "20 board games" },
-                            { id: 3, label: "20 cups" },
+                            {
+                                id: 1,
+                                label: "10 party hats",
+                                purchased: true,
+                                highPriority: false,
+                            },
+                            {
+                                id: 2,
+                                label: "20 board games",
+                                purchased: true,
+                                highPriority: false,
+                            },
+                            {
+                                id: 3,
+                                label: "20 cups",
+                                purchased: false,
+                                highPriority: true,
+                            },
                         ],
                     };
                 },
@@ -46,8 +96,27 @@
                         this.items.push({
                             id: this.items.length + 1,
                             label: this.newItem,
+                            highPriority: this.newItemHighPriority,
                         });
                         this.newItem = "";
+                        this.newItemHighPriority;
+                    },
+                    doEdit(editing) {
+                        this.editing = editing;
+                        this.newItem = "";
+                        this.newItemHighPriority;
+                    },
+                    togglePurchased(item) {
+                        item.purchased = !item.purchased;
+                    },
+                },
+
+                computed: {
+                    characterCount() {
+                        return this.newItem.length;
+                    },
+                    revercedItems() {
+                        return [...this.items].reverse();
                     },
                 },
             }).mount("#shopping-list");
