--- a/source/index.html
+++ b/source/index.html
@@ -1,11 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Lesson First</title>
-    <script src="script.js"></script>
-</head>
-<body>
-<h1>Array<a href="">Link</a></h1>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Lesson First</title>
+    </head>
+    <body>
+        <style>
+            .strikeout {
+                text-decoration: line-through;
+            }
+            .priority {
+                color: burlywood;
+            }
+        </style>
+        <div></div>
+
+        <div id="shopping-list">
+            <div class="header">
+                <h1>{{posts || 'Welcome'}}</h1>
+                <button v-if="editing" @click="doEdit(false)" type="button">
+                    Cancel
+                </button>
+                <button v-else @click="doEdit(true)" type="button">
+                    Add Item
+                </button>
+            </div>
+
+            <div v-if="editing">
+                <input
+                    v-model="newItem"
+                    type="text"
+                    placeholder="All New List"
+                    @keyup.enter="saveItem"
+                />
+                <label for="">
+                    <input type="checkbox" v-model="newItemHighPriority" />
+                    High Priority
+                </label>
+                <button
+                    type="button"
+                    @click="saveItem"
+                    class="btn"
+                    v-bind:disabled="newItem.length === 0"
+                >
+                    Save Item
+                </button>
+                <p>{{characterCount}}/200</p>
+            </div>
+            <a v-bind:herf="newItem">Dynamic Link</a>
+            <p v-if="items.length === 0">No items</p>
+            <ul>
+                <li v-for="post in posts" @click="togglePurchased(post)">
+                    {{ item.label }}
+                </li>
+            </ul>
+        </div>
+        <script src="https://unpkg.com/vue@3"></script>
+        <script>
+            async function fetchData() {
+                return fetch("https://jsonplaceholder.typicode.com/posts")
+                    .then((response) => response.json())
+                    .then((data) => data);
+            }
+            async function getPostList() {
+                let posts = await fetchData();
+                return posts;
+            }
+            const posts = getPostList();
+            console.log(posts);
+
+            const shoppingList = Vue.createApp({
+                data() {
+                    return {
+                        posts: posts,
+                        header: "Shopping list app!",
+                        editing: false,
+                        newItem: "",
+                        newItemHighPriority: false,
+                        items: [
+                            {
+                                id: 1,
+                                label: "10 party hats",
+                                purchased: true,
+                                highPriority: false,
+                            },
+                            {
+                                id: 2,
+                                label: "20 board games",
+                                purchased: true,
+                                highPriority: false,
+                            },
+                            {
+                                id: 3,
+                                label: "20 cups",
+                                purchased: false,
+                                highPriority: true,
+                            },
+                        ],
+                    };
+                },
+                methods: {
+                    saveItem() {
+                        this.items.push({
+                            id: this.items.length + 1,
+                            label: this.newItem,
+                            highPriority: this.newItemHighPriority,
+                        });
+                        this.newItem = "";
+                        this.newItemHighPriority;
+                    },
+                    doEdit(editing) {
+                        console.log(this);
+                        this.editing = editing;
+                        this.newItem = "";
+                        this.newItemHighPriority;
+                    },
+                    togglePurchased(item) {
+                        item.purchased = !item.purchased;
+                    },
+                },
+
+                computed: {
+                    characterCount() {
+                        return this.newItem.length;
+                    },
+                    revercedItems() {
+                        return [...this.items].reverse();
+                    },
+                },
+            }).mount("#shopping-list");
+        </script>
+    </body>
 </html>
