--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <title>Task with fetch</title>
         <script src="script.js"></script>
+        <!-- <script src="fetch-wrapper.js"></script> -->
     </head>
     <body>
         <style>
